conf/k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platafyi-frontend
  namespace: platafyi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platafyi-frontend
  template:
    metadata:
      labels:
        app: platafyi-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/platafyi/0:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
