conf/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platafyi-frontend
  namespace: platafyi
spec:
  selector:
    app: platafyi-frontend
  ports:
    - port: 80
      targetPort: 3000
